@@ -13,8 +13,9 @@ I recommend [url=http://aok.heavengames.com/blacksmith/showfile.php?fileid=10819
 [b]Version History[/b]
 Guide makers et cetera, please include the version into which your guide was written.
 
-Version [b]2021.8.31[/b]:
+Version [b]2021.10.24[/b]:
 -Added support for updated Expanding Fronts.
+-Added missing technology effect types into list for AoE II DE.
 
 Version [b]2021.8.23[/b]:
 -Restored redundant and slower, but functioning erasure of multiple items from lists.
